--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@splinetool/react-spline",
   "version": "2.2.3",
+  "type": "module",
   "packageManager": "yarn@3.2.0",
   "files": [
     "dist"
