--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "serve": "vite preview",
     "build": "vite build && yarn build-types",
     "build-types": "tsc --skipLibCheck --isolatedModules false --noEmit false --emitDeclarationOnly --declaration --outDir dist/",
-    "publish": "yarn build && np",
-    "postinstall":"yarn publish"
+    "publish": "yarn build && np"
   },
   "peerDependencies": {
     "@splinetool/runtime": "*",
