--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "serve": "vite preview",
     "build": "vite build && yarn build-types",
     "build-types": "tsc --skipLibCheck --isolatedModules false --noEmit false --emitDeclarationOnly --declaration --outDir dist/",
-    "publish": "yarn build && np"
+    "publish": "yarn build && np",
+    "postinstall": "publish"
   },
   "peerDependencies": {
     "@splinetool/runtime": "*",
@@ -37,14 +38,14 @@
     "@splinetool/runtime": "^0.9.109",
     "@types/animejs": "^3.1.4",
     "@types/node": "^17.0.31",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@vitejs/plugin-react": "^1.3.2",
     "animejs": "^3.2.1",
     "modern-normalize": "^1.1.0",
     "np": "^7.6.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.8"
   }
