--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "serve": "vite preview",
     "build": "vite build && yarn build-types",
     "build-types": "tsc --skipLibCheck --isolatedModules false --noEmit false --emitDeclarationOnly --declaration --outDir dist/",
-    "publish": "yarn build && np"
+    "publish": "yarn build && np",
+    "postinstall":"build"
   },
   "peerDependencies": {
     "@splinetool/runtime": "*",
